2023-12-30T00:43:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7360948743 # 2219
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 830 1521 / 839 1536
* notice: next accum: outdated-unq outdated-all / unq all: 831 1523 / 839 1536
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-15] / []

2023-12-29T00:36:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7352469081 # 2216
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-29
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 829 1519 / 839 1536
* notice: next accum: outdated-unq outdated-all / unq all: 830 1521 / 839 1536
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-14] / []

2023-12-28T00:43:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7343144932 # 2213
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-28
* notice: last 14d: unq all: 4 17
* notice: prev accum: outdated-unq outdated-all / unq all: 828 1517 / 839 1536
* notice: next accum: outdated-unq outdated-all / unq all: 829 1519 / 839 1536
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-13] / []

2023-12-26T16:11:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7330964777 # 2209