@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-30T00:43:35Z",
-  "count_outdated" : 1523,
-  "uniques_outdated" : 831,
+  "timestamp" : "2023-12-31T00:49:45Z",
+  "count_outdated" : 1525,
+  "uniques_outdated" : 832,
   "count" : 1536,
   "uniques" : 839,
   "clones" : [
-    {
-      "timestamp": "2023-12-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-17T00:00:00Z",
       "count": 2,
