@@ -1,12 +1,7 @@
 {
-  "count": 13,
+  "count": 11,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-12-16T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-12-17T00:00:00Z",
       "count": 2,
