@@ -1,3 +1,12 @@
+2023-12-31T00:49:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7367351295 # 2222
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-31
+* notice: last 14d: unq all: 4 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 831 1523 / 839 1536
+* notice: next accum: outdated-unq outdated-all / unq all: 832 1525 / 839 1536
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-12-16] / []
+
 2023-12-30T00:43:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7360948743 # 2219
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
